--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -18,15 +18,15 @@ body
       .head__title
         | открыта вакансия
         br
-        span Специалист офиса продаж
+        span Специалист по продажам малому <br> и среднему бизнесу
       .head__subtitle
-        | Оставь свой отклик сейчас
-      a.head__button.c__button(href="https://ap.skillaz.co/landing/sMhG9MsoD7eBZioxe/start?birthday=true&cells=true&education=true&citizenship=true")
-        | Пройти Онлайн-интервью
+        | Пройди интервью не выходя из дома
+      a.head__button.c__button(href="https://ap.skillaz.co/landing/g2JfgDg2cE3kET8Mj/start?birthday=true&cells=true&education=true&citizenship=true")
+        | Присоединиться к команде «Билайн»
       a.head__more(href="#more")
         | Подробнее о вакансии
 
-  .sticky-header
+  .sticky-header.sticky-header--2
     .container
       .sticky-header__left
         .sticky-header__logo
@@ -34,143 +34,105 @@ body
           .sticky-header__title
             | открыта вакансия
           .sticky-header__subtitle
-            | Специалист офиса продаж
+            | Специалист по продажам малому и среднему бизнесу
       .sticky-header__right
-        a.c__button.c__button--small(href="https://ap.skillaz.co/landing/sMhG9MsoD7eBZioxe/start?birthday=true&cells=true&education=true&citizenship=true")
+        a.c__button.c__button--small(href="https://ap.skillaz.co/landing/g2JfgDg2cE3kET8Mj/start?birthday=true&cells=true&education=true&citizenship=true")
           | Пройти Онлайн-интервью
   .you
     .container
-      | Ты уже получил высшее/средне-специальное образование или заканчиваешь обучение, ценишь успех и готов к достижениям – работа в офисах продаж «Билайн» ждет тебя!
+      | Ты всегда стараешься быть на острие событий? Тебя ждешь от работы динамики и разнообразия? Тогда наша вакансия для тебя.
 
-
-  .points
+  .invite
     .container
-      .points__title.c__title
-        | В наших офисах ты сможешь
-
-      .points-list
-        .points-item.points-item--1
-          .points-item__icon
-          .points-item__text
-            | Продавать продукты и услуги Компании, крутые девайсы, смартфоны и аксессуары к ним
-        .points-item.points-item--2
-          .points-item__icon
-          .points-item__text
-            | Действовать в слаженной команде профессионалов своего дела
-        .points-item.points-item--3
-          .points-item__icon
-          .points-item__text
-            | Обслуживать клиентов и консультировать их по вопросам связи
-
-      .points__title.c__title
-        | Взамен ты получишь
-
-      .points-list.points-list--2
-        .points-item.points-item--4
-          .points-item__icon
-          .points-item__text
-            | Гарантированный оклад и возможность заработать себе премию
-        .points-item.points-item--5
-          .points-item__icon
-          .points-item__text
-            | Оформление в соответствии с ТК РФ
-        .points-item.points-item--6
-          .points-item__icon
-          .points-item__text
-            | Обучение за счет компании, а также достойную стипендию на время обучения
-        .points-item.points-item--7
-          .points-item__icon
-          .points-item__text
-            | Полис добровольного медицинского страхования включая стоматологию
-        .points-item.points-item--8
-          .points-item__icon
-          .points-item__text
-            | Возможность участвовать в корпоративных конкурсах и выигрывать призы
-        .points-item.points-item--9
-          .points-item__icon
-          .points-item__text
-            | Скидки на фитнес, изучение языков, покупку девайсов
-        .points-item.points-item--10
-          .points-item__icon
-          .points-item__text
-            | Корпоративную мобильную связь
-        .points-item.points-item--11
-          .points-item__icon
-          .points-item__text
-            | Удобное место и график работы
-
-
-  .more#more
-    .more__title.c__title
-      | Подробное описание вакансии
-    .more-item
-      .more-badge
-        .container
-          | Обязанности
-      .container
-        .more-list
-          .more-list__item
-            | Продвижение, демонстрация и консультирование клиентов по продуктам и услугам компании;
-          .more-list__item
-            | Информационно-справочное обслуживание клиентов, проведение абонентских процедур (замена сим-карт, детализация счета, переоформление договоров и т.д.);
-          .more-list__item
-            | ​Продажа продуктов и услуг Компании (тарифы, мобильный и проводной Интернет), интернет оборудование, телефоны, коммуникаторы и аксессуары;
-          .more-list__item
-            | ​Прием платежей, работа с кассой;
-          .more-list__item
-            | ​Поддержание порядка в офисе;
-          .more-list__item
-            | ​Выполнения плана продаж.
-
-    .more-item
-      .more-badge
-        .container
-          | Требования
-      .container
-        .more-list
-          .more-list__item
-            | Образование: среднее специальное, н/высшее, высшее;
-          .more-list__item
-            | ​Готовность к гибкому графику;
-          .more-list__item
-            | ПК – уверенный пользователь;
-          .more-list__item
-            | Опыт работы в продажах – желательно;
-          .more-list__item
-            | Грамотная речь, умение формулировать свои мысли, навыки ведения диалога (активное слушание, понимание собеседника и т.д.)
-
-  .time
+      | Приглашаем на позицию Менеджера по продажам малому и среднему бизнесу.
+      br
+      | Малый и средний бизнес – это самый перспективный и “живой” сегмент рынка, где есть простор  для инноваций, экспериментов и ярких стремительных результатов. 
+      br
+      | Работая с нами, ты сможешь определять будущее клиентов, предлагая им не только телеком-решения, но и самые современные технологии от облачных АТС и мобильного CRM до систем M2M и аналитики  с использованием технологий-Big data. Все пилотные проекты новых продуктов в «Билайне» запускаются именно в SME, и ты сможешь предлагать клиентом то, что никто  не пробовал на рынке до этого! 
+  
+  .should
     .container
-      .time__title.c__title
-        | Время действовать!
-      .time__subtitle
-        | Если ты соответствуешь нашим требованиям и хочешь стать частью команды, то мы предлагаем тебе пройти небольшой путь:
+      .c__title.should__title
+        | Вот что тебе предстоит делать:
+      
+      .should-list
+        .should-list__item.should-list__item--1
+          .should-list__icon
+          .should-list__text
+            | Находить лучшие решения для клиентов, на основе их текущих потребностей. Мы работаем с компаниями, представляющими все индустрии рынка. Ты всегда должен «держать руку на пульсе»  и находить подход к клиентам с самыми разными и сложными запросами.
+  
+        .should-list__item.should-list__item--2
+          .should-list__icon
+          .should-list__text
+            | Заниматься поиском и привлечением новых клиентов, а также развивать существующих
+        
+        .should-list__item.should-list__item--3
+          .should-list__icon
+          .should-list__text
+            | Встречаться с клиентами, у тебя будет несколько встреч  в день –ты же готов делать все, для самого лучшего результата!
+      
+      .should-bottom
+        | Мы поменяли привычный мир офисной работы. У нас ты сможешь достигать еще более высоких результатов в современной среде «BeeFree», работая везде, где есть интернет и ноутбук. 
+  
+  .waiting
+    .container
+      .c__title.waiting__title
+        | Мы ждем тебя, если ты:
 
-      .time-list
-        .time-item.time-item--12
-          .time-item__icon
-          .time-info
-            .time-item__title
-              | Отбор по резюме
-            .time-item__text
-              | Поздравляем, ты его прошел!
-        .time-item.time-item--13
-          .time-item__icon
-          .time-info
-            .time-item__title
-              | Онлайн-интервью в несколько этапов
-            .time-item__text
-              | Тебе понадобятся ноутбук или смартфон на Android и несколько минут твоего времени!
-        .time-item.time-item--14
-          .time-item__icon
-          .time-info
-            .time-item__title
-              | Приглашение на собеседование
-            .time-item__text
-              | В случае успеха - с тобой свяжутся наши специалисты.
+      .waiting-list
+        .waiting-list__item
+          .waiting-list__round
+          | Имеешь отличные презентационные и коммуникативные навыки
+        .waiting-list__item
+          .waiting-list__round
+          | Можешь блестяще проводить деловые встречи на самом высоком уровне с первыми лицами компаний
+        .waiting-list__item
+          .waiting-list__round
+          | Активен и готов постоянно профессионально развиваться
+        .waiting-list__item
+          .waiting-list__round
+          | Тебя «драйвят» интересные задачи
+        .waiting-list__item
+          .waiting-list__round
+          | На «ты» с MS Office и знаешь, как найти в интернете всю необходимую информацию
+      
+      .waiting-bottom
+        | Ты станешь частью глобальной компании и отличной команды профессионалов, где принято открыто общаться и всегда приветствуются новые идеи. 
+  
+  .suggest
+    .container
+      .c__title.suggest__title
+        | Мы предлагаем:
 
-      a.time__button.c__button(href="https://ap.skillaz.co/landing/sMhG9MsoD7eBZioxe/start?birthday=true&cells=true&education=true&citizenship=true")
-        | Пройти Онлайн-интервью
+      .suggest-list
+        .suggest-item.suggest-item--1
+          .suggest-item__icon
+          .suggest-item__text
+            | Достойную оплату труда: оклад + ежемесячная премия – мы ценим твою работу и готовы отмечать твои достижения!
+        .suggest-item.suggest-item--2
+          .suggest-item__icon
+          .suggest-item__text
+            | Служебную сотовую связь – чтобы ты всегда был на связи с командой  и клиентами!
+        .suggest-item.suggest-item--3
+          .suggest-item__icon
+          .suggest-item__text
+            | Возмещение ГСМ – тебе предстоят постоянные встречи с клиентами,  а мы компенсируем тебе топливные расходы.
+      .suggest-list
+        .suggest-item.suggest-item--4
+          .suggest-item__icon
+          .suggest-item__text
+            | Полис добровольного медицинского страхования, обслуживаемый  в лучших клиниках города – чтобы ты всегда был в строю!
+        .suggest-item.suggest-item--5
+          .suggest-item__icon
+          .suggest-item__text
+            | Корпоративное обучение, развитие и возможности карьерного роста – чтобы ты рос и развивался  вместе с нами!
+        .suggest-item.suggest-item--6
+          .suggest-item__icon
+          .suggest-item__text
+            | Официальное трудоустройство  и полное соблюдение трудового законодательства.
+
+      a.suggest__button.c__button(href="https://ap.skillaz.co/landing/g2JfgDg2cE3kET8Mj/start?birthday=true&cells=true&education=true&citizenship=true")
+        | Присоединиться к команде «Билайн»
 
   .footer
     .container
