--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -9,7 +9,8 @@
 
 @import 'sections/_head';
 @import 'sections/_you';
-@import 'sections/_points';
-@import 'sections/_more';
-@import 'sections/_time';
+@import 'sections/_invite';
+@import 'sections/_should';
+@import 'sections/_waiting';
+@import 'sections/_suggest';
 @import 'sections/_footer';
