--- a/app/stylesheets/sections/_should.scss
+++ b/app/stylesheets/sections/_should.scss
@@ -1,5 +1,5 @@
-.time {
-  padding: 110px 0 60px;
+.should {
+  padding: 60px 0 60px;
 
   .container {
     display: flex;
@@ -19,21 +19,24 @@
   }
 
   &-list {
-    margin-top: 60px;
     width: 100%;
+    max-width: 706px;
+    margin: 0 auto;
+    margin-top: 60px;
+  }
+
+  &-list__item {
+    flex: 0 0 30%;
 
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
-  }
-
-  &-item {
-    flex: 0 0 30%;
-    text-align: center;
-
-    display: flex;
-    flex-flow: column nowrap;
     align-items: center;
+
+    margin-bottom: 36px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   &-info {
@@ -42,50 +45,43 @@
     align-items: center;
   }
 
-  &-item__title {
-    margin-top: 23px;
-
-    font-weight: bold;
+  &-list__text {
     font-size: 17px;
-    color: #000000;
-
-    width: 80%;
+    color: #333333;
+    line-height: 24px;
   }
 
-  &-item__text {
-    margin-top: 5px;
-    font-size: 17px;
-    color: #3E4757;
-    line-height: 22px;
-  }
+  &-list__icon {
+    margin-right: 30px;
 
-  &-item__icon {
     height: 138px;
-    width: 138px;
+    flex: 0 0 138px;
     border-radius: 100px;
   }
 
-  &-item--12 .time-item__icon {
-    background: url('../images/point-12.png') no-repeat center center / contain;
+  &-list__item--1 .should-list__icon {
+    background: url('../images/should-1.png') no-repeat center center / contain;
   }
 
-  &-item--13 .time-item__icon {
-    background: url('../images/point-13.png') no-repeat center center / contain;
-    box-shadow: 0px 0px 30px 5px #ffe100, 0px 0px 30px 5px #F7A700;
+  &-list__item--2 .should-list__icon {
+    background: url('../images/should-2.png') no-repeat center center / contain;
   }
 
-  &-item--14 .time-item__icon {
-    background: url('../images/point-14.png') no-repeat center center / contain;
+  &-list__item--3 .should-list__icon {
+    background: url('../images/should-3.png') no-repeat center center / contain;
   }
 
-  &__button {
-    margin-top: 90px;
+  &-bottom {
+    margin-top: 48px;
+    font-size: 21px;
+    color: rgba(61,70,87,0.60);
+    line-height: 30px;
+    text-align: center;
   }
 }
 
-
 @media (max-width: 768px) {
-  .time {
+  .should {
     padding-bottom: 0;
 
     &__subtitle {
@@ -98,7 +94,7 @@
       margin-top: 0;
     }
 
-    &-item {
+    &-list__item {
       margin-top: 50px;
     }
 
@@ -109,7 +105,7 @@
 }
 
 @media (max-width: 425px) {
-  .time {
+  .should {
     padding: 72px 0 48px;
 
     &__subtitle {
@@ -117,15 +113,11 @@
       line-height: 18px;
     }
 
-    &-item {
+    &-list__item {
       flex-flow: row nowrap;
       align-items: flex-start;
 
       margin-top: 42px;
-    }
-
-    &-item--13 .time-item__icon {
-      box-shadow: 0px 0px 15px 0px #ffe100, 0px 0px 15px 0px #F7A700
     }
 
     &-info {
@@ -133,21 +125,14 @@
       align-items: flex-start;
     }
 
-    &-item__icon {
+    &-list__icon {
       flex: 0 0 42px;
       height: 42px;
 
       margin-right: 18px;
     }
 
-    &-item__title {
-      font-size: 17px;
-      line-height: 24px;
-
-      margin-top: 0;
-    }
-
-    &-item__text {
+    &-list__text {
       font-size: 17px;
       line-height: 24px;
 
