--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -44,11 +44,12 @@ body
 
   .invite
     .container
-      | Приглашаем на позицию Менеджера по продажам малому и среднему бизнесу.
-      br
-      | Малый и средний бизнес – это самый перспективный и “живой” сегмент рынка, где есть простор  для инноваций, экспериментов и ярких стремительных результатов. 
-      br
-      | Работая с нами, ты сможешь определять будущее клиентов, предлагая им не только телеком-решения, но и самые современные технологии от облачных АТС и мобильного CRM до систем M2M и аналитики  с использованием технологий-Big data. Все пилотные проекты новых продуктов в «Билайне» запускаются именно в SME, и ты сможешь предлагать клиентом то, что никто  не пробовал на рынке до этого! 
+      .invite__text
+        | Приглашаем на позицию Менеджера по продажам малому и среднему бизнесу.
+      .invite__text
+        | Малый и средний бизнес – это самый перспективный и “живой” сегмент рынка, где есть простор  для инноваций, экспериментов и ярких стремительных результатов. 
+      .invite__text
+        | Работая с нами, ты сможешь определять будущее клиентов, предлагая им не только телеком-решения, но и самые современные технологии от облачных АТС и мобильного CRM до систем M2M и аналитики  с использованием технологий-Big data. Все пилотные проекты новых продуктов в «Билайне» запускаются именно в SME, и ты сможешь предлагать клиентом то, что никто  не пробовал на рынке до этого! 
   
   .should
     .container
@@ -138,4 +139,4 @@ body
     .container
       | Сервис предоставлен компанией Skillaz.
       br
-      | В случае технических неполадок звоните: +7 (499) 110-35-73
+      | В случае технических неполадок звоните: <span>+7 (499) 110-35-73</span>
