--- a/app/stylesheets/sections/_footer.scss
+++ b/app/stylesheets/sections/_footer.scss
@@ -13,8 +13,12 @@
 
 @media (max-width: 425px) {
   .footer {
-    padding: 30px 0;
+    padding: 30px 0 80px;
     font-size: 14px;
     line-height: 18px;
+
+    span {
+      display: block;
+    }
   }
 }
