--- a/app/stylesheets/sections/_head.scss
+++ b/app/stylesheets/sections/_head.scss
@@ -1,5 +1,6 @@
 .head {
   background: url('../images/bg.jpg') no-repeat center center / cover;
+  height: calc(100vh - 128px);
   min-height: 558px;
   padding: 80px 0;
 
@@ -18,26 +19,27 @@
   }
 
   &__title {
-    margin-top: 25px;
+    margin-top: 35px;
     font-size: 42px;
     color: #FFFFFF;
     line-height: 48px;
   }
 
   &__title span {
+    display: block;
     margin-top: 12px;
     font-weight: bold;
   }
 
   &__subtitle {
-    margin-top: 36px;
+    margin-top: 30px;
     font-size: 21px;
     color: #FFFFFF;
     line-height: 30px;
   }
 
   &__button {
-    margin-top: 48px;
+    margin-top: 32px;
   }
 
   &__more {
@@ -74,6 +76,8 @@
     padding: 18px 0 40px;
     min-height: initial;
 
+    height: calc(100vh - 122px);
+
     &__logo {
       height: 38px;
       width: 122px;
@@ -97,9 +101,14 @@
 
     &__subtitle {
       font-size: 17px;
+      color: #FFFFFF;
       line-height: 24px;
+    }
 
-      margin-top: 36px;
+    &__button {
+      font-size: 14px;
+      color: #333333;
+      line-height: 24px;
     }
 
     &__more {
