--- a/app/stylesheets/sections/_invite.scss
+++ b/app/stylesheets/sections/_invite.scss
@@ -1,8 +1,9 @@
 .invite {
+  padding: 60px 0 30px;
+
   font-size: 21px;
   color: rgba(61,70,87,0.60);
   line-height: 30px;
-  padding: 34px 0;
 
   .container {
     text-align: center;
@@ -10,15 +11,18 @@
 }
 
 @media (max-width: 768px) {
-  .you {
-    font-size: 18px;
-    line-height: 26px;
-  }
-}
-
-@media (max-width: 425px) {
-  .you {
+  .invite {
+    padding: 24px 0 0;
     font-size: 14px;
+    color: rgba(61,70,87,0.60);
     line-height: 18px;
+
+    &__text {
+      margin-top: 20px;
+
+      &:first-child {
+        margin-top: 0;
+      }
+    }
   }
 }
