--- a/app/stylesheets/sections/_sticky-header.scss
+++ b/app/stylesheets/sections/_sticky-header.scss
@@ -8,13 +8,12 @@
   padding: 12px 0;
 
   background: #FFFFFF;
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.50);
 
   z-index: 999;
 
   transform: translateY(-100%);
-  transition: transform 0.3s ease;
-  will-change: transform;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  will-change: transform, box-shadow;
 
   &--2 {
     .sticky-header__subtitle {
@@ -25,6 +24,7 @@
 
   &.sticky {
     transform: translateY(0);
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.50);
   }
 
   .container {
