--- a/app/stylesheets/sections/_suggest.scss
+++ b/app/stylesheets/sections/_suggest.scss
@@ -112,7 +112,7 @@
 
 @media (max-width: 425px) {
   .suggest {
-    padding: 72px 0 48px;
+    padding: 30px 0 48px;
 
     &__subtitle {
       font-size: 14px;
@@ -132,8 +132,8 @@
     }
 
     &-item__icon {
-      flex: 0 0 42px;
-      height: 42px;
+      flex: 0 0 48px;
+      height: 48px;
 
       margin-right: 18px;
     }
@@ -141,8 +141,16 @@
     &-item__text {
       font-size: 17px;
       line-height: 24px;
+      text-align: left;
 
       margin-top: 4px;
+    }
+
+    .c__button {
+      margin-top: 40px;
+      font-size: 14px;
+      color: #333333;
+      line-height: 24px;
     }
   }
 }
