--- a/app/stylesheets/sections/_waiting.scss
+++ b/app/stylesheets/sections/_waiting.scss
@@ -1,8 +1,10 @@
 .waiting {
-  padding: 90px 0 30px;
+  padding: 30px 0 10px;
 
   &-list {
+    margin: 0 auto;
     margin-top: 48px;
+    max-width: 800px;
   }
 
   &-list__item {
@@ -22,7 +24,7 @@
 
   &-list__round {
     background-image: linear-gradient(0deg, #F7A700 0%, #FFE100 100%);
-    width: 18px;
+    flex: 0 0 18px;
     height: 18px;
     border-radius: 100px;
 
@@ -37,5 +39,29 @@
     color: rgba(61,70,87,0.60);
     line-height: 30px;
     text-align: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .waiting {
+    &-list__item {
+      font-size: 17px;
+      color: #333333;
+      line-height: 24px;
+    }
+
+    &-list__round {
+      height: 12px;
+      flex: 0 0 12px;
+      margin-right: 18px;
+    }
+
+    &-bottom {
+      margin-top: 60px;
+
+      font-size: 17px;
+      color: rgba(61,70,87,0.60);
+      line-height: 24px;
+    }
   }
 }
