--- a/app/stylesheets/sections/_head.scss
+++ b/app/stylesheets/sections/_head.scss
@@ -2,11 +2,18 @@
   background: url('../images/bg.jpg') no-repeat center center / cover;
   height: calc(100vh - 128px);
   min-height: 558px;
-  padding: 80px 0;
+
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: center;
 
   .container {
+    flex: 1;
+
     display: flex;
     flex-flow: column nowrap;
+    justify-content: center;
     align-items: center;
 
     text-align: center;
@@ -73,9 +80,7 @@
 
 @media (max-width: 425px) {
   .head {
-    padding: 18px 0 40px;
-    min-height: initial;
-
+    min-height: 450px;
     height: calc(100vh - 122px);
 
     &__logo {
